<resources>
    <string name="app_name">SzonyegWebshop</string>
    <string name="regisztracio">Regisztráció</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="felhasznalonev">Felhasználónév</string>
    <string name="email_cim">E-mail cím</string>
    <string name="jelszo">Jelszó</string>
    <string name="jelszo_megerositese">Jelszó megerősítése</string>
    <string name="nev">Név</string>
    <string name="megse">Mégse</string>
    <string name="bejelentkezes_vendegkent">Bejelentkezés vendégként</string>
    <string name="termekek">Termékek</string>
    <string name="kosarba">Kosárba</string>
    <string name="placeholder">Leírás</string>
    <string name="beallitas">Beállítás</string>
    <string name="kijelentkezes">Kijelentkezés</string>
    <string name="kosar">Kosár</string>
    <string name="kereses">Keresés</string>
    <string name="views">views</string>
    <string name="welcoming_image">Welcoming image</string>
    <string name="udvozlo_szoveg1">Üdvözlünk az alkalmazásban!</string>
    <string name="udvozlo_szoveg2">Fedezd fel prémium minőségű szőnyegeinket, amelyek otthonodat meleggé és stílusossá varázsolják! Válogass különböző méretek, minták és anyagok közül, és találd meg a tökéletes darabot!</string>
    <string name="udvozlo_szoveg3">Böngéssz kínálatunkban, és tedd még otthonosabbá lakásod!</string>
    <string name="nezetvaltas">Nézet váltása</string>

    <string-array name="shopping_item_names">
        <item>Perzsa Szőnyeg</item>
        <item>Perzsa Szőnyeg</item>
        <item>Modern Szőnyeg</item>
        <item>Vagány Szőnyeg</item>
        <item>Klasszikus Szőnyeg</item>
        <item>Alföldi Szőnyeg</item>
        <item>Házi Szőnyeg</item>
        <item>Báránybőr Szőnyeg</item>
        <item>Elegáns Szőnyeg</item>
        <item>Virágmintás Szőnyeg</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>Finom, kézzel szőtt perzsa szőnyeg, egyedi mintával és színvilággal.</item>
        <item>Elegáns, modern perzsa szőnyeg, bő választékban és különféle színekben.</item>
        <item>Divatos modern szőnyeg, ideális nappalihoz vagy hálószobához.</item>
        <item>Vibráló, vagány mintázattal rendelkező szőnyeg, tökéletes egyedi stílusú belső terekhez.</item>
        <item>Klasszikus stílusú, tartós és strapabíró szőnyeg, tökéletes minden nappalihoz.</item>
        <item>Hagyományos alföldi szőnyeg, gazdag színekben, kézzel készült.</item>
        <item>Puhább, kényelmes szőnyeg, mely ideális otthoni használatra, melegséget biztosít a lábnak.</item>
        <item>Finom báránybőr szőnyeg, amely meleg, kellemes tapintású, és remekül illeszkedik a hagyományos otthonokba.</item>
        <item>Elegáns szőnyeg, mely a luxust és kényelmet ötvözi a tökéletes kivitelezéssel.</item>
        <item>Virágmintás szőnyeg, tökéletes a tavaszi és nyári hangulathoz, élénk színekkel és friss dizájnnal.</item>
    </string-array>

    <array name="shopping_item_rates">
        <item>4.5</item>
        <item>5.0</item>
        <item>4.0</item>
        <item>3.8</item>
        <item>4.2</item>
        <item>4.5</item>
        <item>4.8</item>
        <item>5.0</item>
        <item>4.7</item>
        <item>4.3</item>
    </array>

    <array name="shopping_item_images">
        <item>@drawable/carpet_1</item>
        <item>@drawable/carpet_2</item>
        <item>@drawable/carpet_3</item>
        <item>@drawable/carpet_4</item>
        <item>@drawable/carpet_5</item>
        <item>@drawable/carpet_6</item>
        <item>@drawable/carpet_7</item>
        <item>@drawable/carpet_8</item>
        <item>@drawable/carpet_9</item>
        <item>@drawable/carpet_10</item>
    </array>

    <array name="shopping_item_price">
        <item>20,000 Ft</item>
        <item>25,000 Ft</item>
        <item>15,000 Ft</item>
        <item>30,000 Ft</item>
        <item>18,500 Ft</item>
        <item>8,000 Ft</item>
        <item>12,000 Ft</item>
        <item>5,500 Ft</item>
        <item>9,500 Ft</item>
        <item>14,000 Ft</item>
    </array>
    <string name="title_activity_cart">CartActivity</string>
    <string name="fizetes">Fizetés</string>
    <string name="osszesen">Összesen: 0 Ft</string>
    <string name="eltavolitas">Eltávolítás</string>
    <string name="vissza_a_termekekhez">Vissza a termékekhez</string>
    <string name="termekkezeles">Termékkezelés</string>
    <string name="leiras">Leírás</string>
    <string name="ar">Ár</string>
    <string name="ertekeles_pl">Értékelés (pl. 4.5)</string>
    <string name="term_k_hozz_ad_sa">Termék hozzáadása</string>
    <string name="ment_s">Mentés</string>
    <string name="n_v">Név</string>
    <string name="le_r_s">Leírás</string>
    <string name="r">Ár</string>
    <string name="rt_kel_s_pl_4_5">Értékelés (pl. 4.5)</string>
    <string name="legjobbra_rt_kelt_term_kek">Legjobbra értékelt termékek</string>
    <string name="perzsa_term_kn_v_szerinti_keres_s">Perzsa terméknév szerinti keresés</string>
    <string name="rt_kelt_term_kek_n_vekv_sorrendben">Értékelt termékek növekvő sorrendben</string>

</resources>