<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        app:showAsAction="always"
        android:icon="@drawable/ic_search"
        android:title="@string/kereses"
        app:actionViewClass="android.widget.SearchView"
        tools:ignore="AlwaysShowAction">
    </item>
    <item
        android:id="@+id/cart"
        app:showAsAction="always"
        android:title="@string/kosar"
        android:icon="@drawable/ic_shopping_cart"
        app:actionLayout="@layout/custom_menu_item"
        >
    </item>
    <item
        android:id="@+id/view_selector"
        app:showAsAction="always"
        android:title="@string/views"
        android:icon="@drawable/ic_view_grid"
        >
    </item>
    <item
        android:id="@+id/log_out_button"
        app:showAsAction="never"
        android:icon="@drawable/ic_exit"
        android:title="@string/kijelentkezes"
        android:orderInCategory="2">
    </item>
    <item
        android:id="@+id/settings_button"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings"
        android:title="@string/beallitas"
        android:orderInCategory="1">
    </item>
</menu>