<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/totalPriceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/osszesen"
        android:textSize="18sp"
        android:padding="16dp"
        android:gravity="end"/>

    <Button
        android:id="@+id/checkoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fizetes"/>

    <Button
        android:id="@+id/backToProductListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vissza_a_termekekhez"
        android:layout_marginBottom="16dp"/>

</LinearLayout>
